--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,15 +4,12 @@
 
 html {
     height: 100%;
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(74,11,17,1) 60%, rgba(153,43,43,1) 91%);
-    background-attachment: fixed;
+    background: #141414;
 }
 
 body {
     padding: 0;
     margin: 0;
-    min-height: 100%;
     font-size: 12pt;
     color: white;
 }
@@ -26,6 +23,7 @@ main {
     padding-top: 20px;
     width: 90%;
     margin: 0 auto;
+    background:#1c1b1b;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
@@ -36,6 +34,10 @@ h1 {
     margin: 0px 0px 10px;
     text-align: center;
     font-size: 2rem;
+
+    .fa-film {
+        margin-left: 10px;
+    }
 }
 
 h3 {
@@ -57,6 +59,11 @@ input {
     padding: 10px;
     width: 90%;
     border-radius: 4px;
+
+    &:focus {
+        outline: none;
+        border: 2px solid rgb(125, 62, 164);
+    }
 }
 
 button {
@@ -65,7 +72,7 @@ button {
     border-radius: 10px;
     margin: 10px auto;
     cursor: pointer;
-    background-color: #180101;
+    background-color: rgb(125, 62, 164);
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     border: none;
     color: white;
@@ -74,9 +81,10 @@ button {
     letter-spacing: 1.5px;
     
     &:hover {
-    background-color: #721405;
+    background-color: rgb(101, 53, 131);
     }
 }
+
 
 #result {
     display: flex;
@@ -84,6 +92,9 @@ button {
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+    border-radius: 12px;
+    background: #1c1b1b;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .movie-container {
@@ -101,6 +112,7 @@ img {
 
     &:hover {
         cursor: pointer;
+        opacity: 0.7;
     }
 }
 
@@ -128,7 +140,7 @@ img {
         flex-direction: row;
         flex-wrap: wrap;
         width: 80%;
-        margin: 10px auto;
+        margin: 30px auto;
     }
 
     .search-field {
