--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ h1 {
   color: white;
   padding: 0px;
   margin: 0px 0px 10px;
-  text-align: center;
   font-size: 2rem;
 }
 h1 .fa-film {
@@ -43,7 +42,6 @@ h3 {
   font-size: 1.5rem;
   padding: 20px 0px 0px;
   margin: 0;
-  text-align: center;
 }
 
 .search-field {
@@ -61,7 +59,7 @@ input {
 }
 input:focus {
   outline: none;
-  border: 2px solid #7d3ea4;
+  border: 2px solid #9d9d9d;
 }
 
 button {
@@ -70,16 +68,17 @@ button {
   border-radius: 10px;
   margin: 10px auto;
   cursor: pointer;
-  background-color: #7d3ea4;
+  background-color: #b6b6b6;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   border: none;
-  color: white;
   font-size: 1.1rem;
-  font-weight: 400;
+  font-weight: 900;
   letter-spacing: 1.5px;
+  transition: background-color 0.2s ease-out;
 }
 button:hover {
-  background-color: #653583;
+  background-color: #373737;
+  color: white;
 }
 
 #result {
@@ -96,7 +95,6 @@ button:hover {
 .movie-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 90%;
   height: 100%;
   margin: 10px 0px;
@@ -135,6 +133,7 @@ img:hover {
     flex-wrap: wrap;
     width: 80%;
     margin: 30px auto;
+    align-items: flex-start;
   }
 
   .search-field {
@@ -142,12 +141,12 @@ img:hover {
     margin: 30px 0px;
     font-family: "Montserrat", sans-serif;
   }
-
-  button {
+  .search-field button {
     margin: 0 10px;
   }
 
   h1 {
     font-size: 3rem;
+    text-align: center;
   }
 }
