--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,13 @@ img:hover {
     width: 60%;
     font-size: 1.2rem;
     margin: 0;
+    background-color: #111;
+    border: 1px solid #cdcdcd;
+  }
+  input:focus {
+    outline: none;
+    border-color: #c6d5e1;
+    box-shadow: 0 0 8px #c6d5e1;
   }
 
   .movie-container {
