--- a/scss/main.scss
+++ b/scss/main.scss
@@ -137,6 +137,14 @@ img {
         width: 60%;
         font-size: 1.2rem;
         margin: 0;
+        background-color: #111;
+        border: 1px solid rgb(205, 205, 205);
+
+        &:focus {
+            outline: none;
+            border-color: #c6d5e1;
+            box-shadow: 0 0 8px #c6d5e1;
+          }
     }
 
     .movie-container {
