--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,7 @@ img:hover {
     font-size: 1.2rem;
     margin: 0;
     background-color: #111;
+    color: #fff;
     border: 1px solid #cdcdcd;
   }
   input:focus {
