--- a/scss/main.scss
+++ b/scss/main.scss
@@ -138,6 +138,7 @@ img {
         font-size: 1.2rem;
         margin: 0;
         background-color: #111;
+        color: #fff;
         border: 1px solid rgb(205, 205, 205);
 
         &:focus {
