--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@ h1 {
     padding: 0px;
     margin: 0px 0px 10px;
     font-size: 2rem;
+    text-align: center;
 
     .fa-film {
         margin-left: 10px;
@@ -102,7 +103,7 @@ button {
     flex-direction: column;
     width: 90%;
     height: 100%;
-    margin: 10px 0px;
+    margin: 20px 0px 10px;
 
     button {
         margin: 20px 0px 0px;
@@ -112,7 +113,8 @@ button {
 
 img {
     width: 100%;
-    height: auto;
+    max-height: 450px;
+    object-fit: contain;
 
     &:hover {
         cursor: pointer;
@@ -121,16 +123,31 @@ img {
 }
 
 .plot {
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 1.6rem;
 }
 
+
 @media screen and (min-width: 768px) {
+    #result {
+        flex-direction: row;
+        flex-wrap: wrap;
+
+
+    .movie-container {
+        width: 50%;
+        padding: 20px 50px;
+    }
+    }
+}
+
+@media screen and (min-width: 1100px) {
 
     .wrapper {
         width: 80%;
         padding: 30px;
     }
+
 
     input {
         margin-top: 40px;
@@ -145,14 +162,10 @@ img {
             outline: none;
             border-color: #c6d5e1;
             box-shadow: 0 0 8px #c6d5e1;
-          }
+        }
     }
 
-    .movie-container {
-        width: 33%;
-        padding: 20px;
-    }
-
+ 
     #result {
         display: flex;
         flex-direction: row;
@@ -160,6 +173,18 @@ img {
         width: 80%;
         margin: 30px auto;
         align-items: flex-start;
+
+        .movie-container {
+            width: 33%;
+            padding: 20px 10px;
+        }
+    
+    }
+
+
+    .plot {
+        font-size: 1.1rem;
+        line-height: 1.7rem;
     }
 
     .search-field {
@@ -178,3 +203,4 @@ img {
         text-align: center;
     }
 }
+
