--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -156,9 +156,12 @@ h3 {
     .wrapper {
         width: 70%;
         padding: 30px;
+ 
+
+    p {
+        font-size: 1.5rem;
     }
-
-
+}
     .search-field input {
         margin-top: 40px;
         width: 60%;
