--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@ main {
 }
 
 .wrapper {
+    position: relative;
     border-radius: 12px;
     padding-top: 20px;
     width: 90%;
@@ -39,7 +40,7 @@ main {
         font-size: 2.5rem;
         line-height: 3.5rem;
         text-align: center;
-    
+
         .fa-film {
             margin-left: 10px;
         }
@@ -61,40 +62,40 @@ main {
     flex-direction: column;
 
 
-input {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.3rem;
-    margin: 0 auto;
-    padding: 10px;
-    width: 90%;
-    border-radius: 4px;
+    input {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1.3rem;
+        margin: 0 auto;
+        padding: 10px;
+        width: 90%;
+        border-radius: 4px;
 
-    &:focus {
-        outline: none;
-        border: 2px solid rgb(157, 157, 157);
+        &:focus {
+            outline: none;
+            border: 2px solid rgb(157, 157, 157);
+        }
     }
-}
 
-button {
-    font-family: 'Montserrat', sans-serif;
-    padding: 10px 25px;
-    border-radius: 10px;
-    margin: 10px auto;
-    cursor: pointer;
-    background-color: #581313;
-    color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    border: none;
-    font-size: 1.1rem;
-    font-weight: 900;
-    letter-spacing: 1.5px;
-    transition: background-color 0.2s ease-out;
+    button {
+        font-family: 'Montserrat', sans-serif;
+        padding: 10px 25px;
+        border-radius: 10px;
+        margin: 10px auto;
+        cursor: pointer;
+        background-color: #581313;
+        color: #fff;
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+        border: none;
+        font-size: 1.1rem;
+        font-weight: 900;
+        letter-spacing: 1.5px;
+        transition: background-color 0.2s ease-out;
 
-    &:hover {
-        background-color: #6c1818;
-        color: white;
+        &:hover {
+            background-color: #6c1818;
+            color: white;
+        }
     }
-}
 }
 
 #result {
@@ -109,34 +110,57 @@ button {
     font-family: 'Montserrat', sans-serif;
 
 
-.movie-container {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 100%;
-    margin: 20px 0px 10px;
+    .movie-container {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        height: 100%;
+        margin: 20px 0px 10px;
 
-}
+    }
 
-img {
-    width: 100%;
-    object-fit: contain;
+    img {
+        width: 100%;
+        object-fit: contain;
 
-    &:hover {
-        cursor: pointer;
-        opacity: 0.7;
+        &:hover {
+            cursor: pointer;
+            opacity: 0.7;
+        }
+    }
+
+    h3 {
+        font-size: 2rem;
+        margin: 5px 0px;
+    }
+
+    .plot {
+        font-size: 1.2rem;
+        line-height: 1.8rem;
     }
 }
 
-h3 {
-    font-size: 2rem;
-    margin: 5px 0px;
-}
+footer {
+    font-family: 'Montserrat', sans-serif;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
 
-.plot {
-    font-size: 1.2rem;
-    line-height: 1.8rem;
-}
+    p {
+        font-size: 0.8rem;
+        margin: 0;
+        padding: 0;
+    }
+
+    a {
+        color: #fff;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -150,10 +174,10 @@ h3 {
         flex-wrap: wrap;
 
 
-    .movie-container {
-        width: 50%;
-        padding: 20px 50px;
-    }
+        .movie-container {
+            width: 50%;
+            padding: 20px 50px;
+        }
     }
 
     h3 {
@@ -175,12 +199,13 @@ h3 {
             font-size: 3rem;
             text-align: center;
         }
- 
 
-    p {
-        font-size: 1.5rem;
+
+        p {
+            font-size: 1.5rem;
+        }
     }
-}
+
     .search-field input {
         margin-top: 40px;
         width: 60%;
@@ -197,7 +222,7 @@ h3 {
         }
     }
 
- 
+
     #result {
         display: flex;
         flex-direction: row;
@@ -220,7 +245,7 @@ h3 {
             font-size: 1.3rem;
             font-weight: 100;
         }
-    
+
     }
 
 
@@ -240,6 +265,26 @@ h3 {
         }
     }
 
-   
-}
+    footer {
+        font-family: 'Montserrat', sans-serif;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 200px 0px 30px;
 
+        p {
+            font-size: 0.8rem;
+            margin: 0;
+            padding: 0;
+        }
+
+        a {
+            color: #fff;
+        }
+    }
+}
